# MediaBridge

./: .coverage.Jamess-MacBook-Pro-2.local.7257.XLGWbzrx  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  cypress.config.js  data  gitignore  lightfm_recommendation.py  main.py  package-lock.json  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
cypress/e2e/: home_page.cy.js
cypress/fixtures/: movies.json
data_processing/: __init__.py  load_data.py  process_data.py  save_data.py  wiki_to_netflix.py
db/: insert_data.py
doc/: container.md  review-procedure.md
mediabridge/: clean_up_data.py  constants.py  data_download.py  dataclasses.py  definitions.py  download_data.py  main  main.py  main_test.py  schemas.py  utils.py
mediabridge-frontend/: index.html  package-lock.json  package.json  vite.config.ts
mediabridge-frontend/src/: App.css  App.tsx
mediabridge/api/: app.py  app_test.py  conftest.py  main.py
mediabridge/config/: backend.py  setting.py
mediabridge/data_processing/: build_matrices.py  clean_up_data.py  credentials  download_data.py  etl.py  etl_helpers.py  interaction_matrix.py  interaction_matrix_test.py  preprocess.py  wiki_to_netflix.py  wiki_to_netflix_test.py  wiki_to_netflix_test_data.py
mediabridge/db/: connect.py  load.py  queries.py  tables.py
mediabridge/engine/: RecommendationEngine.py  engine_etl.py  recommendation_engine.py
src/: constants.py  main.py  process_data.py
src/config/: setting.py
tests/: constants.py  logging_util.py  test_data_processing.py
(+50 files in other folders)
