
[project]
name = "MediaBridge"
version = "0.0.1"
requires-python = ">=3.10"

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_also = [
    'no cover: begin(?s:.)*?no cover: end',
]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "N", "NPY", "PERF", "PIE", "PTH", "PYI", "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]

[tool.mypy]
strict = true
show_traceback = true
warn_unreachable = true
ignore_missing_imports = true 
no_namespace_packages = true